--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require-dev": {
         "duncan3dc/object-intruder": "^0.3",
         "duncan3dc/php-ini": "^0.1.0",
+        "duncan3dc/sql": "dev-master",
         "mockery/mockery": "^0.9.9",
         "phpunit/phpunit": "^5.7.1",
         "satooshi/php-coveralls": "^1.0"
