--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }],
     "require": {
         "duncan3dc/bom-string": "^0.1.0",
-        "php": ">=5.6.0"
+        "php": "^5.6|^7.0"
     },
     "require-dev": {
         "mockery/mockery": "^0.9.4",
