--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,9 @@
         "php": "^5.6|^7.0"
     },
     "require-dev": {
-        "mockery/mockery": "^0.9.4",
-        "phpunit/phpunit": "^5.3"
+        "mockery/mockery": "^0.9.9",
+        "phpunit/phpunit": "^5.7",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
