--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
         "role": "Developer"
     }],
     "require": {
-        "duncan3dc/bom-string": "^0.1.0",
+        "duncan3dc/bom-string": "^0.1|^0.2",
         "php": "^5.6|^7.0"
     },
     "require-dev": {
+        "duncan3dc/object-intruder": "^0.3",
         "mockery/mockery": "^0.9.9",
-        "phpunit/phpunit": "^5.7",
+        "phpunit/phpunit": "^5.7.1",
         "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
