Update the docs to version 0.3.0

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,4 +5,5 @@ Getting Started:
 
 Usage:
   Getting Started: /usage/getting-started/
+  Writing Tags: /usage/writing-tags/
   Modules: /usage/modules/
