--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-.gitattributes      export-ignore
-.gitignore          export-ignore
+*.md                export-ignore
+.git*               export-ignore
+/*.yml              export-ignore
 /phpunit.xml.dist   export-ignore
 /tests              export-ignore
-/.travis.yml        export-ignore
