--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "duncan3dc/object-intruder": "^0.3",
         "duncan3dc/php-ini": "^0.1.0",
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^5.7.7",
-        "satooshi/php-coveralls": "^1.0"
+        "phpunit/phpunit": "^5.7.7"
     },
     "autoload": {
         "psr-4": {"duncan3dc\\MetaAudio\\": "src/"}
