Add a composer alias to run our test suite

--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,11 @@
     },
     "autoload-dev": {
         "psr-4": {"duncan3dc\\MetaAudioTests\\": "tests/"}
+    },
+    "scripts": {
+        "test": [
+            "vendor/bin/phpunit",
+            "@composer validate --strict"
+        ]
     }
 }
