--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "role": "Developer"
     }],
     "require": {
-        "duncan3dc/bom-string": "^0.1|^0.2",
+        "duncan3dc/bom-string": "^1.0",
         "php": "^7.2"
     },
     "require-dev": {
