--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "duncan3dc/php-ini": "^1.0",
         "maglnet/composer-require-checker": "^2.0",
         "mockery/mockery": "^1.2",
+        "squizlabs/php_codesniffer": "^3.4",
         "phpunit/phpunit": "^8.2"
     },
     "autoload": {
@@ -31,6 +32,7 @@
     "scripts": {
         "test": [
             "vendor/bin/phpunit",
+            "vendor/bin/phpcs",
             "vendor/bin/composer-require-checker",
             "@composer validate --strict"
         ]
