--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "duncan3dc/php-ini": "^1.0",
         "maglnet/composer-require-checker": "^2.0",
         "mockery/mockery": "^1.2",
+        "phpstan/phpstan": "^0.11.8",
         "squizlabs/php_codesniffer": "^3.4",
         "phpunit/phpunit": "^8.2"
     },
