--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }],
     "require": {
         "duncan3dc/bom-string": "^1.0",
-        "php": "^7.2"
+        "php": "^7.2|^8.0"
     },
     "require-dev": {
         "duncan3dc/object-intruder": "^0.3.0",
