--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     }],
     "require": {
         "duncan3dc/bom-string": "^1.0",
-        "php": "^7.2|^8.0"
+        "php": "^7.2 || ^8.0"
     },
     "require-dev": {
-        "duncan3dc/object-intruder": "^0.3.0",
+        "duncan3dc/object-intruder": "^0.3 || ^1.0",
         "duncan3dc/php-ini": "^1.0",
         "maglnet/composer-require-checker": "^2.0",
         "mockery/mockery": "^1.2",
