--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,10 @@
             "vendor/bin/composer-require-checker",
             "@composer validate --strict"
         ]
+    },
+    "config": {
+        "allow-plugins": {
+            "ocramius/package-versions": true
+        }
     }
 }
