--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,10 @@
     "require-dev": {
         "duncan3dc/object-intruder": "^0.3 || ^1.0",
         "duncan3dc/php-ini": "^1.0",
-        "maglnet/composer-require-checker": "^2.0",
-        "mockery/mockery": "^1.2",
+        "maglnet/composer-require-checker": "^2.0 || ^4.0",
+        "mockery/mockery": "^1.3.6",
         "squizlabs/php_codesniffer": "^3.5.8",
-        "phpunit/phpunit": "^8.2"
+        "phpunit/phpunit": "^8.5.31"
     },
     "autoload": {
         "psr-4": {"duncan3dc\\MetaAudio\\": "src/"}
